[package]
authors = ["John Doe <jd@example.com>"]
name = "stm32f103c8t6-rust-starter"
version = "0.0.1"

[workspace]

[dependencies]
stm32f1xx-hal = {git = "https://github.com/stm32-rs/stm32f1xx-hal.git", features = ["stm32f103", "rt"]}
cortex-m-rt = "0.6.8"
cortex-m = "0.5.8"
panic-semihosting = "0.5.1"
cortex-m-semihosting = "0.3.2"

[dev-dependencies]
itm = "0.3.1"

[profile.dev]
opt-level = 0
lto = true
debug = true
incremental = false

[profile.release]
opt-level = 3
lto = true
debug = true
incremental = false
